live-magic (1.1) unstable; urgency=low

  * Add translations:
    - Italian translation by Fabio Balzano (Closes: #496848)
    - Spanish translation by Fabio Balzano (Closes: #496857)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 28 Aug 2008 05:21:24 +0100

live-magic (1.0) unstable; urgency=low

  * 1.0 release for Lenny:
    - Set default distribution to Lenny.
    - Don't show distribution page when running Lenny as stable.
    - Depend on live-helper >= 1.0.0
  * Add locale and keyboard layout step.
  * Move to Debhelper 7.
  * Add gettext support and translations:
    - Czech translation by Miroslav Kure (Closes: #494548)
    - Finnish translation by Esko Arajärvi (Closes: #495334)
    - French translation by Frederic Daniel Luc Lehobey (Closes: #494742)
    - German translation by Helge Kreutzmann (Closes: #494882)
    - Russian translation by Yuri Kozlov (Closes: #494500)
    - Swedish translation by Martin Ågren (Closes: #494503)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sun, 24 Aug 2008 00:43:54 +0100

live-magic (0.7) unstable; urgency=low

  * Add d-i integration step which sets LH_DEBIAN_INSTALLER="live"
    (Closes: #492082)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 24 Jul 2008 19:42:35 +0100

live-magic (0.6) unstable; urgency=medium

  * Remove "--preserve-env" when calling gksu. Contrary to #490134, the
    "--preserve-env" switch actually works on some systems, but I don't think
    we need it as we pass the environment variables we are interested in
    manually. (Closes: #491242)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 18 Jul 2008 13:49:31 +0100

live-magic (0.5) unstable; urgency=low

  * Remove python-gnome2-desktop from Recommends (Closes: #491248)
  * Update package description.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 18 Jul 2008 00:56:49 +0100

live-magic (0.4) unstable; urgency=low

  * Move to native package.
  * debian/control:
    - Add Depends: on gksu (Closes: #476071)
    - Update package description.