@@ -1,10 +1,12 @@
 live-magic (1.1) unstable; urgency=low
 
+  * Try some alternative file managers to open the completed build window other
+    than xdg-open.
   * Add translations:
     - Italian translation by Fabio Balzano (Closes: #496848)
     - Spanish translation by Fabio Balzano (Closes: #496857)
 
- -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 28 Aug 2008 05:21:24 +0100
+ -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 28 Aug 2008 08:47:48 +0100
 
 live-magic (1.0) unstable; urgency=low
 
